force-app/main/default/objects/TimeSheet__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#AtYourBest as Super Coach Programme Training</fullName>
            </value>
            <value>
                <fullName>Active Solutions</fullName>
            </value>
            <value>
                <fullName>AD and Messaging operations</fullName>
            </value>
            <value>
                <fullName>Adhoc analysis</fullName>
            </value>
            <value>
                <fullName>Analysis &amp; Reporting</fullName>
            </value>
            <value>
                <fullName>Analysis &amp; Report writing</fullName>
            </value>
            <value>
                <fullName>Application Analysis</fullName>
            </value>
            <value>
                <fullName>Application Deployment</fullName>
            </value>
            <value>
                <fullName>Attending External Events</fullName>
            </value>
            <value>
                <fullName>Authentic Conversations workshop</fullName>
            </value>
            <value>
                <fullName>Billable Time</fullName>
            </value>
            <value>
                <fullName>Brainstorming</fullName>
            </value>
            <value>
                <fullName>Business Budgeting</fullName>
            </value>
            <value>
                <fullName>Candidate Search</fullName>
            </value>
            <value>
                <fullName>Capturing deals</fullName>
            </value>
            <value>
                <fullName>Client questionnaire</fullName>
            </value>
            <value>
                <fullName>Coaching/Mentoring</fullName>
            </value>
            <value>
                <fullName>Communications &amp; follow-up</fullName>
            </value>
            <value>
                <fullName>Conducting External Training</fullName>
            </value>
            <value>
                <fullName>Conducting Internal Training</fullName>
            </value>
            <value>
                <fullName>Connect Session</fullName>
            </value>
            <value>
                <fullName>Coordination/Interviews</fullName>
            </value>
            <value>
                <fullName>DAP/PAP</fullName>
            </value>
            <value>
                <fullName>Data Backup</fullName>
            </value>
            <value>
                <fullName>Data cleansing &amp; transition to CRM</fullName>
            </value>
            <value>
                <fullName>Detailed Analysis &amp; Reporting</fullName>
            </value>
            <value>
                <fullName>Documentation/Offer/BGV</fullName>
            </value>
            <value>
                <fullName>Drafting job description</fullName>
            </value>
            <value>
                <fullName>Exceptional Coach Programme Training</fullName>
            </value>
            <value>
                <fullName>ERP/CRM Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>