force-app/main/default/objects/TimeSheet__c/fields/ActivityGroup__c.field-meta.xml
<CustomField>
    <fullName>ActivityGroup__c</fullName>
    <label>Activity Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Development</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Budgeting &amp; Forecasting</fullName>
            </value>
            <value>
                <fullName>Compliance &amp; Policies</fullName>
            </value>
            <value>
                <fullName>Conferences</fullName>
            </value>
            <value>
                <fullName>Councils</fullName>
            </value>
            <value>
                <fullName>CRM transformation</fullName>
            </value>
            <value>
                <fullName>Culture change initiative (SD)</fullName>
            </value>
            <value>
                <fullName>ERP/CRM</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>iCSAT Survey</fullName>
            </value>
            <value>
                <fullName>Idle Time</fullName>
            </value>
            <value>
                <fullName>IT Management</fullName>
            </value>
            <value>
                <fullName>Meetings</fullName>
            </value>
            <value>
                <fullName>Networks</fullName>
            </value>
            <value>
                <fullName>PACE</fullName>
            </value>
            <value>
                <fullName>Part time/Flexi Work</fullName>
            </value>
            <value>
                <fullName>Recruitments</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Research &amp; Deliverable</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Strategic NC Projects</fullName>
            </value>
            <value>
                <fullName>Strategy &amp; Planning</fullName>
            </value>
            <value>
                <fullName>Super Coach</fullName>
            </value>
            <value>
                <fullName>System Admin</fullName>
            </value>
            <value>
                <fullName>Trainings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>