force-app/main/default/objects/TimeSheet__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <label>Enquiry</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>TimeSheets</relationshipLabel>
    <relationshipName>TimeSheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>