force-app/main/default/objects/TimeSheet__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>TimeSheets</relationshipLabel>
    <relationshipName>TimeSheets</relationshipName>
    <type>Lookup</type>
</CustomField>